styles/style.css
:root {
    font-size: 1rem;
    box-sizing: border-box;
}

html {
    margin: 0;
    padding: 0;
    background-color: white;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #EEEEEE;
    position: relative;
    padding-bottom: 10px;
    overflow-x: hidden;
    position: relative;
    /* max-width: 1400px; */
    margin: 0;
}

a {
    text-decoration: none;
}

.nav1 {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    top: 0;
    position: sticky;
    background-color: white;
}

#container-1-1 {
    padding-left: 0rem;
    margin-top: 0.5rem;
}

#search-bar {
    padding-top: 0.59rem;
    color: lightgrey;
    font-size: 1rem;
}

#search-icon {
    color: rgb(173, 166, 166);
}

#search-button {
    color: grey;
    background-color: rgb(248, 244, 244);
    box-shadow: none;
    height: 2rem;
    border: 1px solid grey;
    margin-left: -5rem;
}

.search {
    margin-right: 50px;
}

#search-and-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

#container-1-3 {
    display: flex;
    padding: 0.2rem;
}

#upload-icon {
    color: grey;
    margin-top: 0.6rem;
    align-self: baseline;
    padding-right: 0.5rem;
}

#sign-in {
    border: 2px solid rgb(12, 124, 189);
    background-color: rgb(12, 124, 189);
    padding: 0.5rem;
    color: white;
    font-size: 1rem;
    font-weight: bold;
}

.textadjust1 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    opacity: 0.4;
}

#side-header {
    object-fit: cover;
}

.main-containers {
    display: grid;
    grid-template-columns: 4fr 1fr;
    grid-template-rows: 1fr 2rem;
    grid-gap: 0.5rem;
    margin-left: 0.5rem;
    padding-right: 0;
}

.first-column {
    padding: auto;
    width: 100%;
}

iframe {
    width: 98.5%;
    border-top: 1rem solid #EEEEEE;
    border-right: 1rem solid #EEEEEE;
    border-bottom: 1rem solid #EEEEEE;
}

.side-containers {
    padding-left: 0;
    display: grid;
    grid-template-columns: 250px 250px;
    grid-template-rows: 2rem repeat(20, 10rem) 2rem;
    /*    grid-auto-rows: 10rem;*/
    grid-gap: 0.5rem;
    grid-auto-flow: row;
    /*    width: auto;*/
}

.content-info {
    color: black;
    display: block;
    border: 1rem solid #EEEEEE;
    background-color: white;
    line-height: 2rem;
    padding: 2rem;
    margin-left: -1rem;
}

#upload-side-container-text {
    margin-left: 5rem;
    display: flex;
    align-self: center;
}

.video-info-container {
    background-color: white;
    border-top: 1rem solid #EEEEEE;
    border-right: 1rem solid #EEEEEE;
    border-bottom: 1rem solid #EEEEEE;
    padding: 1rem 3rem 1rem 1rem;
}

#h3 {
    padding: 0.5rem;
    font-weight: 600;
    font-size: 1.3rem;
}

.youtuber-info {
    display: flex;
    position: relative;
    align-self: stretch;

}

#odin-container {
    margin-left: 0.5rem;
}

#views {
    display: inline;
    position: relative;
    margin-top: -2rem;
    margin-left: 5rem;
    padding-left: 82%;
    font-weight: 400;
    font-size: 1.1rem;
    border-collapse: collapse;
}

#views::after {
    content: "";
    display: block;
    border-bottom: 0.2rem solid blue;
    width: 14%;
    float: right;
    position: relative;
    top: 1rem;
}

#subscribe {
    display: inline-flex;
    font-size: 0.8rem;
    background-color: rgb(243, 14, 14);
    border: 1px solid rgb(243, 14, 14);
    padding: 0.5rem;
    font-weight: bold;
    border-collapse: collapse;
    text-align: center;
    align-self: flex-end;
    margin-top: 0.5rem;
}

#subscribers {
    padding-top: 0.37rem;
    padding-bottom: 0.47rem;
    text-align: center;
    box-sizing: content-box;
    border-collapse: collapse;

}

button ~ span {
    border: 1.1px solid grey;
    opacity: 0.7;
    padding: 0.5rem 0.7rem 0.62rem 0.5rem;
    margin-top: -1.5rem;
}

.expression {
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: white;
    border-top: 0.2rem solid #EEEEEE;
    padding-top: 1rem;
}


#more {
    padding-bottom: 0.45rem;
}

.number-of-comments-section {
    margin-left: -0.4rem;
}

.share-save-like-dislike {
    padding-top: 0.4rem;
}

.material-icons {
    margin-top: 0.1rem;
}

.btn {
    display: inline-flex;
}

#loading-comments {
    margin-left: 50%;
    margin-top: 20%;
}

#show-more {
    color: grey;
    padding-left: 50%;
    padding-top: 0.2rem;
    border-top: 1px solid grey;
    margin-top: 0.5rem;
}

#text-avtar-image {
    margin-right: 0.1rem;
    position: relative;
    margin-bottom: 3.5rem;
    display: inline;
}

.show-more-2 {
    grid-area: 22/1/23/3;
    color: lightgrey;
    padding-left: 42%;
    border-top: 0.1rem solid lightgray;
}

footer {
    background-color: white;
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
    border: 1px solid rgb(236, 234, 234);
    padding-top: 2.5rem;
}

.footer-buttons {
    display: inline-flex;
    border: 1px solid grey;
    padding: 3px;
    background-color: lightgrey;
}

select {
    background-color: lightgrey;
    padding-right: 5px;
}

.footer-forms {
    border: none;
}

#footer-link + a {
    color: black;
}

.bottom-links-2 {
    color: grey;
    font-size: 10px;
}

#choose-language-image {
    object-fit: cover;
    border-top: 1.5rem;
    border-top: 1rem solid #EEEEEE;
}

#youtube-logo-footer {
    align-self: center;
}

#footer-links {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    border-top: 1px solid lightgrey;
    font-weight: bold;
    margin-top: 10px;
}

.footer1 {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    display: 1px solid orange;
}

#footer-top {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    height: 1.8rem;
    padding-right: 43.5rem;
    position: absolute;
    z-index: 1;
}

#footer-links {
    display: block;
}

.bottom-links-1 {
    display: inline block;
}

.bottom-links-2 {
    display: inline;
    margin-left: 0.5rem;
}

